--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,5 @@ cmake_minimum_required(VERSION 3.16)
 project(code)
 
 set(CMAKE_CXX_STANDARD 14)
-
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Fast")
 add_executable(code main.cpp)
-
